--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,12 @@
-# vscode
-.vscode 
-
-# Intellij
-*.iml
-.idea
-
 # npm
 node_modules
+package-lock.json
 
-# Don't include the compiled main.js file in the repo.
-# They should be uploaded to GitHub releases instead.
-main.js
+# build
+*.js.map
 
-# Exclude sourcemaps
-*.map
+# vscode
+.vscode
 
-# obsidian
+# obsidian data
 data.json
-
-# Exclude macOS Finder (System Explorer) View States
-.DS_Store
