--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,18 +4,16 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "module": "ESNext",
-    "target": "ES6",
+    "target": "es5",
     "allowJs": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "isolatedModules": true,
-	"strictNullChecks": true,
     "lib": [
-      "DOM",
-      "ES5",
-      "ES6",
-      "ES7"
+      "dom",
+      "es5",
+      "scripthost",
+      "es2015"
     ]
   },
   "include": [
