chore: update author name in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "1.0.0",
 	"minAppVersion": "0.9.12",
 	"description": "This plugin adds RPG elements to Obsidian.",
-	"author": "Charlie Maddex",
+	"author": "Cunjur",
 	"authorUrl": "https://xn--1-kmb.com/",
 	"isDesktopOnly": false
 }
